// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeTruthy should return false for [] and %s (isNot true) 1`] = `
"expect([32mexpected[39m).not.toBeTruthy()

[1mexpected[22m should not be a truthy value.
got: [31marray[39m"
`;

exports[`testing toBeTruthy should return false for 1 and %s (isNot true) 1`] = `
"expect([32mexpected[39m).not.toBeTruthy()

[1mexpected[22m should not be a truthy value.
got: [31mstring[39m"
`;

exports[`testing toBeTruthy should return false for 1 and %s (isNot true) 2`] = `
"expect([32mexpected[39m).not.toBeTruthy()

[1mexpected[22m should not be a truthy value.
got: [31mnumber[39m"
`;

exports[`testing toBeTruthy should return false for any and %s (isNot true) 1`] = `
"expect([32mexpected[39m).not.toBeTruthy()

[1mexpected[22m should not be a truthy value.
got: [31many[39m"
`;

exports[`testing toBeTruthy should return false for true and %s (isNot true) 1`] = `
"expect([32mexpected[39m).not.toBeTruthy()

[1mexpected[22m should not be a truthy value.
got: [31mboolean[39m"
`;

exports[`testing toBeTruthy should return false for truthy 1`] = `
"expect([32mexpected[39m).toBeTruthy()

[1mexpected[22m should be a truthy value.
got: [31mnull[39m"
`;

exports[`testing toBeTruthy should return false for truthy 2`] = `
"expect([32mexpected[39m).toBeTruthy()

[1mexpected[22m should be a truthy value.
got: [31mundefined[39m"
`;

exports[`testing toBeTruthy should return false for truthy 3`] = `
"expect([32mexpected[39m).toBeTruthy()

[1mexpected[22m should be a truthy value.
got: [31mstring[39m"
`;

exports[`testing toBeTruthy should return false for truthy 4`] = `
"expect([32mexpected[39m).toBeTruthy()

[1mexpected[22m should be a truthy value.
got: [31mnumber[39m"
`;

exports[`testing toBeTruthy should return false for truthy 5`] = `
"expect([32mexpected[39m).toBeTruthy()

[1mexpected[22m should be a truthy value.
got: [31mboolean[39m"
`;
